--- a/correlation_matrix_app/correlation_matrix.exe.config
+++ b/correlation_matrix_app/correlation_matrix.exe.config
@@ -1,14 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup>
+    <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
     <system.serviceModel>
         <bindings>
             <wsHttpBinding>
-                <binding name="WSHttpBinding_IDataBase">
-                  <security mode="None"/>
-                </binding>
+                <binding name="WSHttpBinding_IDataBase" />
             </wsHttpBinding>
         </bindings>
         <client>
