--- a/k_means_app/k_means_cluster.exe.config
+++ b/k_means_app/k_means_cluster.exe.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
+    <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
     <system.serviceModel>
@@ -15,6 +15,9 @@
             <endpoint address="http://localhost:8000/TickerAnalytics/DatabaseService"
                 binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IDataBase"
                 contract="ServiceReference1.IDataBase" name="WSHttpBinding_IDataBase" />
+                <identity>
+                    <userPrincipalName value="T-420-PC\T-420" />
+                </identity>
         </client>
     </system.serviceModel>
 </configuration>
